--- a/Unit02/40461_Mod02_2.4.ipynb
+++ b/Unit02/40461_Mod02_2.4.ipynb
@@ -256,7 +256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 3,
       "metadata": {
         "trusted": false
       },
@@ -266,7 +266,7 @@
           "output_type": "stream",
           "text": [
             "before: [11, 21, 13, 14, 51, 161, 117, 181]\n",
-            "after : [11, 21, 13, 51, 161, 117, 181]\n"
+            "after : [21, 13, 14, 51, 161, 117, 181]\n"
           ]
         }
       ],
@@ -275,7 +275,7 @@
         "# can pop specific index like pop(3)\n",
         "number_list = [11, 21, 13, 14, 51, 161, 117, 181]\n",
         "print(\"before:\", number_list)\n",
-        "number_list.pop(3)\n",
+        "number_list.pop(0)\n",
         "print(\"after :\", number_list)\n"
       ]
     },
@@ -663,7 +663,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.13 (default, Oct  4 2022, 14:00:32) \n[GCC 9.4.0]"
+      "version": "3.8.13"
     },
     "vscode": {
       "interpreter": {
