--- a/Unit02/40461_Mod03_3.4.ipynb
+++ b/Unit02/40461_Mod03_3.4.ipynb
@@ -360,11 +360,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Notebooks can be exported as .pdf\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "tip_words = ['Notebooks', 'can', 'be', 'exported', 'as', '.pdf'] \n",
@@ -375,11 +383,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "no_space = \"\"\n",
@@ -389,11 +405,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I-t-e-r-a-t-i-o-n\n",
+      "I t e r a t i o n\n",
+      "I...t...e...r...a...t...i...o...n\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example - .join() iterates through sequences\n",
     "dash = \"-\"\n",
@@ -418,15 +444,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A*s*t*e*r*i*s*k\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] .join() letters list objects with an Asterisk: \"*\"\n",
     "letters = [\"A\", \"s\", \"t\", \"e\", \"r\", \"i\", \"s\", \"k\"]\n",
-    "\n"
+    "jj = \"*\"\n",
+    "joinletter = jj.join(letters)\n",
+    "print(joinletter)"
    ]
   },
   {
@@ -442,15 +478,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jack*and*Jill*went*up*the*hill*To*fetch*a*pail*of*water\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] complete Choose the separator\n",
     "phrase_words = ['Jack', 'and', 'Jill', 'went', 'up', 'the', 'hill', 'To', 'fetch', 'a', 'pail', 'of', 'water']\n",
-    "\n"
+    "\n",
+    "sep = input(\"choose a joiner\")\n",
+    "\n",
+    "print(sep.join(phrase_words))"
    ]
   },
   {
@@ -480,11 +527,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['H', 'e', 'l', 'l', 'o']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "hello_letters = list(\"Hello\")\n",
@@ -493,11 +548,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c~o~n~c~a~t~e~n~a~t~e~s\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# cast sting to list\n",
@@ -510,11 +573,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "print(\"Hello \", end = '')\n",
@@ -523,11 +594,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n",
+      "still something to learn about print()\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# This  is the default print end\n",
@@ -537,11 +617,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C*o*n*c*a*t*e*n*a*t*i*o*n*"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# end inserts any valid str character: A-z, 0-9,!,@,*,\\n,\\t or ''(empty string)...\n",
@@ -559,15 +647,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello- you- silly billy\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] use 3 print() statements to output text to one line \n",
     "# [ ] separate the lines by using \"- \" (dash space)\n",
-    "\n"
+    "\n",
+    "print(\"hello\", end= \"- \")\n",
+    "print(\"you\", end= \"- \")\n",
+    "print(\"silly billy\")\n"
    ]
   },
   {
@@ -580,15 +679,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "l\n",
+      "w\n",
+      "a\n",
+      "y\n",
+      "s\n",
+      "t\n",
+      "e\n",
+      "s\n",
+      "t\n",
+      "y\n",
+      "o\n",
+      "u\n",
+      "r\n",
+      "c\n",
+      "o\n",
+      "d\n",
+      "e\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create a string (fact) of 20 or more characters and cast to a list (fact_letters)\n",
     "# [ ] iterate fact, printing each char on one line, except for spaces print a new line\n",
-    "\n"
+    "fact = \"always test your code\"\n",
+    "fact_letters = list(fact)\n",
+    "\n",
+    "\n",
+    "for l in fact:\n",
+    "    if l != \" \":\n",
+    "        print(l)\n",
+    "    else:\n",
+    "        pass "
    ]
   },
   {
@@ -607,15 +739,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3+4+5+4+7+3+7+6+5+8+4+5+4+3+7+4+3+5+8+5 = 100\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create add the digits\n",
+    "snum = \"34547376584543743585\"\n",
+    "snumlist = list(snum)\n",
+    "joiner = \"+\"\n",
+    "total = 0\n",
     "\n",
-    "\n"
+    "for n in snumlist:\n",
+    "    total += int(n)\n",
+    "\n",
+    "print(joiner.join(snumlist), \"=\", total)\n"
    ]
   },
   {
