--- a/Unit02/40461_Mod03_Project3.ipynb
+++ b/Unit02/40461_Mod03_Project3.ipynb
@@ -69,17 +69,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "or BRUSHED thy not Little thou me? SUMMER’S thee? like THOUGHTLESS play i a not hand a my fly am man\n"
+     ]
+    }
+   ],
    "source": [
     "# [] create poem mixer\n",
+    "joiner = \" \"\n",
+    "#empty new list\n",
+    "new_list = []\n",
+    "#input phrase and split words by \" \" into a list\n",
+    "phrase = input(\"type a long phrase\")\n",
+    "words_list = phrase.split()\n",
+    "# get length of list\n",
+    "list_length = len(words_list)\n",
+    "# loop index of word list\n",
+    "count = 0\n",
     "\n",
+    "while count < list_length:\n",
+    "    for word in words_list:\n",
+    "        # get word length -1 for index\n",
+    "        word_index = words_list.index(word)\n",
+    "    # changing of cases based on index length\n",
+    "        if len(word) <= 3:\n",
+    "            word = word.lower()\n",
+    "            # change word in list to new case based on index\n",
+    "            words_list[word_index] = word\n",
+    "            count += 1\n",
+    "        elif len(word) >= 7:\n",
+    "            word = word.upper()\n",
+    "            # change word in list to new case based on index \n",
+    "            words_list[word_index] = word\n",
+    "            count += 1\n",
+    "        else:\n",
+    "            count += 1\n",
+    "            pass \n",
     "\n",
+    "def word_mixer(w_list):\n",
+    "    # sort list\n",
+    "    w_list.sort()\n",
+    "    # while length of list list greater than 5 words\n",
+    "    while len(w_list) > 5:\n",
+    "        # pop 5th from last word\n",
+    "        popped5_word = w_list.pop(-5)\n",
+    "        #add popped word to new list\n",
+    "        new_list.append(popped5_word)\n",
+    "        # pop 1st word\n",
+    "        popped1_word = w_list.pop(0)\n",
+    "        # add to new list\n",
+    "        new_list.append(popped1_word)\n",
+    "        # pop last word\n",
+    "        lastpop = w_list.pop()\n",
+    "        # add to new list\n",
+    "        new_list.append(lastpop)\n",
+    "    return new_list\n",
     "\n",
-    "\n"
+    "word_mixer(words_list)\n",
+    "phrase = joiner.join(new_list)\n",
+    "print(phrase)"
    ]
   },
   {
@@ -107,7 +163,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
+   }
   }
  },
  "nbformat": 4,
